...
    private lazy var searchController: UISearchController = {
        let searchController = CustomSearchController(searchResultsController: nil)
        searchController.setupSearchBar(delegate: self)
        return searchController
    }()
    
    private lazy var searchResultTable: UITableView = {
        let tableView = UITableView()
        tableView.register(MovieViewCell.self, forCellReuseIdentifier: MovieViewCell.identifier)
        tableView.rowHeight = UITableView.automaticDimension
        tableView.sectionHeaderHeight = UITableView.automaticDimension
        tableView.estimatedRowHeight = 70
        tableView.isScrollEnabled = true
...
        guard let cell = tableView.dequeueReusableCell(withIdentifier: MovieViewCell.identifier) as? MovieViewCell
        else { return .init() }
        guard indexPath.row != searchDataSource.endIndex, searchDataSource.indices.contains(indexPath.row) else {
            return cell
        }
        cell.setup(searchItem: searchDataSource[indexPath.row])
        cell.accessibilityIdentifier = "movieCell"
        return cell
    }
    
    func tableView(_ tableView: UITableView, viewForHeaderInSection section: Int) -> UIView? {
        let viewHeader = MovieViewHeader()
        viewHeader.display(totalResults: totalResults)
...
